--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@nk/core",
   "version": "1.0.0",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.cjs.js",
   "repository": "https://github.com/nguyenkhachieu/nk-react-lib.git",
   "author": "nguyenkhachieu <nguyenkhachieu0508@gmail.com>",
   "license": "MIT",
@@ -17,7 +17,6 @@
     "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "5.3.3"
   },
-  "private": true,
   "scripts": {
     "build:dev": "rollup -c ./rollup.config.js"
   },
